# Social-Distancing-Detection

./: .gitignore  .gitmodules  README.md  image_00_detections.json  image_01_detections.json  image_space_tracking.py  person_detection.py  person_detection_models.py  social_distancing.rviz
calibration/: calib_cam_to_cam.txt
depth_image_gen/: CMakeLists.txt  package.xml
depth_image_gen/src/: depth_image_gen.cpp  stereo_subscriber.cpp
depth_img_gen/: CMakeLists.txt  package.xml
image_folder_publisher/launch/: stereo_image_folder_publisher.launch
image_folder_publisher/scripts/: image_folder_publisher.py
lab_07/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cv_stereo_matcher_wrap.cpp  cv_stereo_matcher_wrap.h  image_00_detections.json  lab_7.cpp  lab_7.h  lab_7_stereo  lab_7_stereo_new_pics  main.cpp  new_dataset_image_00_detections.json  points.yaml  social_distancing.cpp  social_distancing.h  sparse_stereo_matcher.cpp  sparse_stereo_matcher.h  stereo_calibration.cpp  stereo_calibration.h  viewer_3d.h  visualization.cpp  visualization.h
lab_07/2011_09_28_drive_0045_extract/2011_09_28/2011_09_28_drive_0045_extract/image_00/: timestamps.txt
lab_07/2011_09_28_drive_0045_extract/2011_09_28/2011_09_28_drive_0045_extract/image_01/: timestamps.txt
lab_07/2011_09_28_drive_0045_extract/2011_09_28/2011_09_28_drive_0045_extract/image_02/: timestamps.txt
lab_07/2011_09_28_drive_0045_extract/2011_09_28/2011_09_28_drive_0045_extract/oxts/data/: 0000000000.txt  0000000001.txt  0000000003.txt  0000000006.txt  0000000007.txt  0000000008.txt  0000000009.txt  0000000010.txt  0000000011.txt  0000000012.txt  0000000013.txt  0000000014.txt  0000000015.txt  0000000017.txt  0000000018.txt  0000000019.txt  0000000020.txt  0000000021.txt  0000000022.txt  0000000023.txt  0000000024.txt  0000000026.txt  0000000027.txt  0000000028.txt  0000000029.txt  0000000032.txt  0000000034.txt  0000000035.txt  0000000036.txt  0000000038.txt  0000000039.txt  0000000040.txt  0000000042.txt  0000000045.txt  0000000047.txt  0000000048.txt  0000000049.txt  0000000050.txt  0000000053.txt  0000000054.txt  (+259 more)
lab_07/2011_09_28_drive_0045_extract/2011_09_28/2011_09_28_drive_0045_extract/velodyne_points/: timestamps.txt  timestamps_end.txt
lab_07/2011_09_28_drive_0045_extract/2011_09_28/2011_09_28_drive_0045_extract/velodyne_points/data/: 0000000002.txt  0000000003.txt  0000000004.txt  0000000005.txt  0000000008.txt  0000000010.txt  0000000012.txt  0000000013.txt  0000000014.txt  0000000015.txt  0000000018.txt  0000000019.txt  0000000020.txt  0000000021.txt  0000000022.txt  0000000023.txt  0000000025.txt  0000000028.txt  0000000029.txt  0000000030.txt  0000000031.txt  0000000033.txt  0000000034.txt  0000000035.txt  0000000036.txt  0000000041.txt  0000000042.txt  0000000043.txt  0000000044.txt  0000000045.txt
lab_07/camera-library/: CMakeLists.txt  LICENSE  README.md
lab_07/camera-library/cmake/: cmake-boilerplate.cmake  config.cmake.in
lab_07/camera-library/example/: CMakeLists.txt  main-cvcam.cpp  main-dualcam.cpp  main-kitticam.cpp
lab_07/camera-library/include/tek5030/: dual_camera.h  kitti_camera.h  opencv_camera.h  stereo_pair.h
lab_07/camera-library/src/: dual_camera.cpp  kitti_camera.cpp  opencv_camera.cpp  stereo_pair.cpp
lab_07/lab-guide/: 1-get-an-overview.md  2-stereo-calibration.md  3-sparse-stereo-processing.md  4-dense-stereo-processing.md
object_3d_placement/: package.xml
object_3d_placement/launch/: social_distancing.launch
object_3d_placement/params/: social_distancing.rviz
object_3d_placement/scripts/: object_placer.py
person_detection/: person_detection.py  prototyping_scripts.py
person_detection/output_jsons/: new_dataset_image_02_detections.json  new_dataset_image_03_detections.json
person_placer/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp  person_placer  person_placer.cpp  person_placer.h  profile.json  social_distancing  sparse_stereo_matcher.cpp  stereo_calibration.h  viewer_3d.cpp  visualization.cpp
utils/: utils.py
(+180 files in other folders)
